refactor: 예약 상태 상수화·알림 발행 중복 제거·toList 단순화 (#18)
Closes #18